Adjust logo position on title slide

--- a/tableHTML_Vienna_R.html
+++ b/tableHTML_Vienna_R.html
@@ -130,7 +130,7 @@
 .gdbar img {
   position: absolute; 
   top: 0px;
-  left: 50px;
+  left: 110px;
   width: 500px !important;
   height: 220px !important;
 }
@@ -252,7 +252,7 @@ mtcars %&gt;%
   tableHTML(widths = c(140, rep(50, 11)))</pre>
 
 
-<table style="border-collapse:collapse;" class=table_2656 border=1>
+<table style="border-collapse:collapse;" class=table_6840 border=1>
 <col width="140">
 <col width="50">
 <col width="50">
@@ -378,7 +378,7 @@ mtcars %&gt;%
 </article></slide><slide class=''><hgroup><h2>Example</h2></hgroup><article  id="example">
 
 
-<table style="border-collapse:collapse;" class=table_4383 border=1>
+<table style="border-collapse:collapse;" class=table_3325 border=1>
 <caption>This is a caption</caption>
 <caption id="footer" align="bottom">This is a footer</caption>
 <col width="120">
@@ -632,7 +632,7 @@ mtcars %&gt;%
   str()</pre>
 
 <pre >## Classes &#39;tableHTML&#39;, &#39;html&#39;, &#39;character&#39;  atomic [1:1] 
-## &lt;table style=&quot;border-collapse:collapse;&quot; class=table_7152 border=1&gt;
+## &lt;table style=&quot;border-collapse:collapse;&quot; class=table_1274 border=1&gt;
 ## &lt;col width=&quot;140&quot;&gt;
 ## &lt;col width=&quot;50&quot;&gt;
 ## &lt;col widt| __truncated__
@@ -690,7 +690,7 @@ mtcars %&gt;%
 </article></slide><slide class=''><hgroup><h2>Example of how some of the add_css_* <br> functions can be used</h2></hgroup><article  id="example-of-how-some-of-the-add_css_-functions-can-be-used-1">
 
 
-<table style="border-collapse:collapse;" class=table_3969 border=1>
+<table style="border-collapse:collapse;" class=table_3223 border=1>
 <caption style="text-align:center;font-size:20px;color:black;">Table of Cars</caption>
 <caption id="footer" align="bottom" style="text-align:left;color:black;">Figure 1. Stats for famous cars</caption>
 <col width="140">
@@ -824,7 +824,7 @@ mtcars %&gt;%
 </article></slide><slide class=''><hgroup><h2>Conditional formatting</h2></hgroup><article  id="conditional-formatting-1">
 
 
-<table style="border-collapse:collapse;" class=table_2157 border=1>
+<table style="border-collapse:collapse;" class=table_3785 border=1>
 <col width="140">
 <col width="45">
 <col width="45">
@@ -1356,12 +1356,12 @@ Questions?
 
 </h3>
 
-<p><br> If you need help using the package, there is a <code>tableHTML</code> tag on stackoverflow:</p>
+<p><br> <br> If you need help using the package, there is a <code>tableHTML</code> tag on stackoverflow:</p>
 
 <p><a href='https://stackoverflow.com/questions/tagged/tablehtml' title=''>https://stackoverflow.com/questions/tagged/tablehtml</a></p>
 
 <div class="footer">
-<p>if you find any bugs please report them on the issues page on github.</p>
+<p>If you find any bugs please report them on the issues page on github.</p>
 
 <p><a href='https://github.com/LyzandeR/tableHTML/issues' title=''>https://github.com/LyzandeR/tableHTML/issues</a></p></div></article></slide>
 
